--- a/frontend/frontend/public/assets/css/light-bootstrap-dashboard.css
+++ b/frontend/frontend/public/assets/css/light-bootstrap-dashboard.css
@@ -470,7 +470,7 @@ body>.navbar-collapse .nav li:hover .nav-link {
 
 .sidebar .nav li.active .nav-link,
 body>.navbar-collapse .nav li.active .nav-link {
-    color: #637888;
+    color: #4d606d;
     opacity: 1;
     background: #c5d3de;
 }
