--- a/frontend/frontend/public/assets/css/light-bootstrap-dashboard.css
+++ b/frontend/frontend/public/assets/css/light-bootstrap-dashboard.css
@@ -1975,8 +1975,8 @@ fieldset[disabled] .form-control {
     border: 0;
     font-size: 16px;
     border-radius: 0;
-    min-height: 50px;
-    max-height: 61px;
+    min-height: 83px; /* min-height: 50px; */
+    max-height: 94px; /* max-height: 61px; */
     background-color: #f5dd42;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
